# typing_preferences_to_comfort_scores

./: .gitignore  README.md  README.txt  analysis_visualization.py  bayes_glmm_features.py  bayes_glmm_posterior_scoring_of_bigrams.py  bayesian_modeling.py  bigram_feature_definitions.py  bigram_feature_extraction.py  bigram_features.py  bigram_frequency_timing.py  bigram_pair_feature_evaluation.py  bigram_pair_recommendations.py  bigram_typing_comfort_scores.csv  comprehensive_pair_recommender.py  config.yaml  data_preprocessing.py  data_processing.py  ergo_n_prefs.py  extend_comfort_scores.py  feature_evaluation.py  feature_extraction.py  main.py  memory-estimator.py  ngram_frequencies.py  optimize_layout.py  pyproject.toml  requirements.txt  start.py  validate_on_model.py  visualization.py
bigram_typing_preferences_to_comfort_scores/: data.py  model.py  optimize_layout.py  recommendations.py
data/: feature_interactions.txt  filtered_feature_interactions.txt  processed_bigram_data.csv
engram3/: analysis.py  data.py  model.py  optimize_layout.py  recommendations.py  utils.py
extra/: analyze_model_precision.py  analyze_single_feature.py  analyze_single_feature.sh  memory-estimator.py  pair_recommender.py  quantize_compress_model.py  validate_on_model.py
output/: all_bigram_comfort_scores.csv  bigram_typing_comfort_scores.csv  feature-space-analysis_multicollinearity-check_sensitivity-analysis_cross-validation_303of406participants_0improbable_2024-10-14.txt  feature-space-analysis_multicollinearity-check_sensitivity-analysis_cross-validation_406participants_2024-10-14.txt  feature-space-analysis_multicollinearity-check_sensitivity-analysis_cross-validation_4finger-priors_303of406participants_0improbable_consistent-choices_2024-10-14.txt  glmm_results_model_config.json  (+2 more)
(+54 files in other folders)
