[tool.poetry]
name = "engram3"
version = "0.1.0"
description = "Keyboard layout optimization through preference learning"
authors = ["Arno Klein <binarybottle@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<4"
pyyaml = "^6.0"
setuptools = "^69.0.2"
pytest = "^8.3.4"
scikit-learn = "^1.5.2"
matplotlib = "^3.9.3"
networkx = "^3.4.2"
numpy = "<2.0.0"
pandas = ">=2.0.0"
seaborn = "^0.13.2"
julia = "^0.6.2"
pyjulia = "^0.0.6"
cmdstanpy = "^1.2.4"
aesara = "^2.9.4"
pydantic = "^2.10.3"
statsmodels = "^0.14.4"
adjusttext = "^1.3.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
