[tool.poetry]
name = "engram3"
version = "0.1.0"
description = ""
authors = ["Arno Klein"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pyyaml = "^6.0.2"
numpy = "^2.2.1"
pandas = "^2.2.3"
scikit-learn = "^1.6.0"
matplotlib = "^3.10.0"
cmdstanpy = "^1.2.5"
adjusttext = "^1.3.0"
pydantic = "^2.10.4"
argparse = "^1.4.0"
logging = "^0.4.9.6"
datetime = "^5.5"
pathlib = "^1.0.1"
psutil = "^6.1.1"
tenacity = "^9.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
